index.html(MAIN)

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
 </head>
 <body>
   <div class="box">
-    <h1>SM1AC</h1>
-    <p>Comin' Soon!!!</p>
-  </div>
+  <h1>🚀 SM1AC</h1>
+  <p><strong>Spoof M1 Apple Chips</strong> – an experimental project exploring virtualization and chip emulation.</p>
+  <p>Status: <em>Work in progress</em></p>
+  <p>Updates will appear here soon!</p>
+</div>
+
 </body>
 </html>
