--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SM1AC - Coming Soon</title>
+  <title>SM1AC - Spoof M1 Apple Chips</title>
   <style>
     body {
       margin: 0;
@@ -24,7 +24,22 @@
 
     p {
       font-size: 1.2rem;
-      opacity: 0.8;
+      opacity: 0.9;
+    }
+
+    ul {
+      text-align: left;
+      max-width: 500px;
+      margin: 1rem auto;
+      padding: 0;
+      list-style: none;
+    }
+
+    ul li {
+      margin: 0.5rem 0;
+      background: rgba(255, 255, 255, 0.15);
+      padding: 0.8rem 1rem;
+      border-radius: 10px;
     }
 
     .box {
@@ -33,16 +48,47 @@
       border-radius: 20px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
       backdrop-filter: blur(10px);
+      max-width: 700px;
+    }
+
+    a {
+      color: #ffd369;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <div class="box">
-  <h1>🚀 SM1AC</h1>
-  <p><strong>Spoof M1 Apple Chips</strong> – an experimental project exploring virtualization and chip emulation.</p>
-  <p>Status: <em>Work in progress</em></p>
-  <p>Updates will appear here soon!</p>
-</div>
+    <h1>SM1AC</h1>
+    <p><strong>Spoof M1 Apple Chips</strong> – an experimental community project exploring virtualization and Apple Silicon spoofing.</p>
+    <p>Status: <em>Work in Progress</em></p>
 
+    <h2>What We’re Doing</h2>
+    <p>Keeping Hackintosh alive by experimenting with:</p>
+    <ul>
+      <li>QEMU/KVM for ARM64 emulation</li>
+      <li>CPUID & device-tree spoofing</li>
+      <li>Shims/layers to mimic Apple hardware</li>
+      <li>Documenting results & limitations</li>
+    </ul>
+
+    <h2>Get Involved</h2>
+    <ul>
+      <li>Join our Discord: <a href="https://discord.gg/qawDTR6Wg2" target="_blank">LinuxIsBetter</a></li>
+      <li>Check issues & tasks on <a href="https://github.com/viragsimplecoder0008/sm1ac" target="_blank">GitHub</a></li>
+      <li>Contribute QEMU configs, patches, or docs</li>
+    </ul>
+
+    <p><strong>Website:</strong> <a href="https://viragsimplecoder0008.github.io/sm1ac" target="_blank">viragsimplecoder0008.github.io/sm1ac</a></p>
+
+    <p style="margin-top:1.5rem;font-size:0.9rem;opacity:0.7;">
+      *This is a research/educational project. We do not provide macOS builds, ISOs, or Apple proprietary code.*
+    </p>
+  </div>
 </body>
 </html>
