--- a/index.html
+++ b/index.html
@@ -63,26 +63,27 @@
   </style>
 </head>
 <body>
-  <h1>🚀 SM1AC</h1>
-  <p><strong>Spoof M1 Apple Chips</strong> – an experimental community project exploring virtualization and Apple Silicon spoofing.</p>
-  <p>Status: <em>Work in Progress</em></p>
-
-  <h2>What We’re Doing</h2>
-  <p>Keeping Hackintosh alive by experimenting with:</p>
-  <ul>
-    <li>QEMU/KVM for ARM64 emulation</li>
-    <li>CPUID & device-tree spoofing</li>
-    <li>Shims/layers to mimic Apple hardware</li>
-    <li>Documenting results & limitations</li>
-  </ul>
-
-  <h2>Get Involved</h2>
-  <ul>
-    <li>Join our Discord: <a href="https://discord.gg/qawDTR6Wg2" target="_blank">LinuxIsBetter</a></li>
-    <li>Check issues & tasks on <a href="https://github.com/viragsimplecoder0008/sm1ac" target="_blank">GitHub</a></li>
-    <li>Contribute QEMU configs, patches, or docs</li>
-  </ul>
-
+  <div>
+    <h1>🚀 SM1AC</h1>
+    <p><strong>Spoof M1 Apple Chips</strong> – an experimental community project exploring virtualization and Apple Silicon spoofing.</p>
+    <p>Status: <em>Work in Progress</em></p>
+  
+    <h2>What We’re Doing</h2>
+    <p>Keeping Hackintosh alive by experimenting with:</p>
+    <ul>
+      <li>QEMU/KVM for ARM64 emulation</li>
+      <li>CPUID & device-tree spoofing</li>
+      <li>Shims/layers to mimic Apple hardware</li>
+      <li>Documenting results & limitations</li>
+    </ul>
+  
+    <h2>Get Involved</h2>
+    <ul>
+      <li>Join our Discord: <a href="https://discord.gg/qawDTR6Wg2" target="_blank">LinuxIsBetter</a></li>
+      <li>Check issues & tasks on <a href="https://github.com/viragsimplecoder0008/sm1ac" target="_blank">GitHub</a></li>
+      <li>Contribute QEMU configs, patches, or docs</li>
+    </ul>
+    <div>
   <p><strong>Website:</strong> <a href="https://viragsimplecoder0008.github.io/sm1ac" target="_blank">viragsimplecoder0008.github.io/sm1ac</a></p>
 
   <p style="margin-top:1.5rem;font-size:0.9rem;opacity:0.7;">
