--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
   <nav aria-label="Top navigation">
     <div class="brand">SM1AC</div>
     <div class="controls">
-      <a href="#about">About</a>
-      <a href="#steps">Get Started</a>
-      <a href="#contribute">Contribute</a>
+      <a href="#">About</a>
+      <a href="#Get-Started">Get Started</a>
+      <a href="../contribute/index.html">Contribute</a>
       <button id="themeToggle" class="btn-toggle" type="button">Toggle theme</button>
     </div>
   </nav>
